Complete CH-001: regression gate, trace mode, CI, and the digest.
The regression watch list ships with every baseline null, deliberately.
The deltas recorded there were measured before the event-dispatch
redesign and the Bot API upgrade, at ten rounds, in a setup matching no
division exactly. They say why a bot is watched; treating them as
baselines would gate on numbers describing a bridge that no longer
exists. The gate reports NO BASELINE until M-006 records real ones.

Trace mode reports from inside the robot rather than from the harness.
Neither engine hands a per-turn view to an outside observer -- classic's
Control API has snapshots the Tank Royale runner does not expose -- and
instrumenting an engine would measure a build no robot runs against. One
class compiled against the classic API runs on both engines, because
reproducing that API is what the bridge is for, and it measures what the
robot perceives, which is the parity question exactly.

Its first output raises something unexplained: classic's first traced
turn is 0 and the bridge's is 1, with the bridge's state at turn N
matching classic's at turn N -- so the robot's first execution appears
to happen a turn later rather than the number being offset. Alongside
that, BotPeer.getTime() returns the Tank Royale turn number unchanged
while the status mapper rebases the round number, so the codebase treats
the two engines' counting conventions as differing in one place and not
the other. Recorded in the harness README; it belongs to the score-gap
milestones, not to a guess here.

CI runs clue validate plus the unit tier. Switched clue-source from
vendored to release so a multi-megabyte binary stays out of a repository
whose purpose is comparing robot behaviour; the version stays pinned
exactly as generated. bot-api 1.0.2 turned out to be on Maven Central
after all, so the tier resolves on a runner -- the build comment saying
otherwise was stale and is corrected.

Parity is not clean, and AN-004 says so rather